k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keyuar-backend
  labels:
    app: keyuar-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keyuar-backend
  template:
    metadata:
      labels:
        app: keyuar-backend
    spec:
      imagePullSecrets:
        - name: ecr-regcred
      containers:
        - name: backend
          image: 910168469763.dkr.ecr.ap-south-1.amazonaws.com/keyuar-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: keyuar-secretproviderclass
