k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: keyuar-backend-svc
  labels:
    app: keyuar-backend
spec:
  selector:
    app: keyuar-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: keyuar-frontend-svc
  labels:
    app: keyuar-frontend
spec:
  selector:
    app: keyuar-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
